# llm-as-a-service

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  setup.sh  test.py
laas/: api_models.py  config.py  engine.py  main.py
tests/: test_engine.py  test_main.py
