[tool.poetry]
name = "laas"
version = "0.1.0"
description = ""
authors = ["Jacek Plocharczyk <jacek.plocharczyk@mowa.ai>"]
readme = "README.md"
packages = [{include = "laas"}]

[tool.poetry.dependencies]
python = "^3.10"
llama = {git = "https://github.com/facebookresearch/llama.git", rev = "ea9f33d"}
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
torch = ">=2.0.0, !=2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = "120"
disable = "C0116,C0111"
extension-pkg-whitelist="pydantic"